<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/cpiLoading"
        style="@android:style/Widget.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsvDescription"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTitleName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp10"
                android:layout_marginTop="@dimen/dp20"
                android:layout_marginEnd="@dimen/dp10"
                android:text="@string/name"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp10"
                android:layout_marginTop="@dimen/dp20"
                android:layout_marginEnd="@dimen/dp10"
                android:textAlignment="center"
                tools:text="Nombre" />

            <TextView
                android:id="@+id/tvTitleDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp10"
                android:layout_marginTop="@dimen/dp20"
                android:layout_marginEnd="@dimen/dp10"
                android:text="@string/description"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp10"
                android:layout_marginTop="@dimen/dp20"
                android:layout_marginEnd="@dimen/dp10"
                android:textAlignment="center"
                tools:text="Descripcion" />

            <TextView
                android:id="@+id/tvTitleEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp10"
                android:layout_marginTop="@dimen/dp20"
                android:layout_marginEnd="@dimen/dp10"
                android:text="@string/email"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp10"
                android:layout_marginTop="@dimen/dp20"
                android:layout_marginEnd="@dimen/dp10"
                android:textAlignment="center"
                tools:text="Email" />

            <TextView
                android:id="@+id/tvTitlePhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp10"
                android:layout_marginTop="@dimen/dp20"
                android:layout_marginEnd="@dimen/dp10"
                android:text="@string/telefono"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp10"
                android:layout_marginTop="@dimen/dp20"
                android:layout_marginEnd="@dimen/dp10"
                android:textAlignment="center"
                tools:text="Telefono" />

            <TextView
                android:id="@+id/tvTitleRating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp10"
                android:layout_marginTop="@dimen/dp20"
                android:layout_marginEnd="@dimen/dp10"
                android:text="@string/rating"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvRating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp10"
                android:layout_marginTop="@dimen/dp20"
                android:layout_marginEnd="@dimen/dp10"
                android:textAlignment="center"
                tools:text="Rating" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>